# DimensionInspection

./: .gitignore
file/: Homo_cam2base.tiff  detect.desktop  dist.tiff  license_gdutng  mtx.tiff  mtx9.tiff  run.bat  run.sh
file/demo/: distanceMtx.tiff  robotCoordinate.csv
file/气罐/: Homo_cam2base.tiff  dist.tiff  distanceMtx.tiff  mtx.tiff  robotCoordinate.csv
main_program/: CMakeLists.txt  Font.qrc  Image.qrc  MvCamera.cpp  MvCamera.h  SharePara.cpp  SharePara.h  dialogcalibration.cpp  dialogcalibration.h  dialogcalibration.ui  dialoglinecam.cpp  dialoglinecam.h  dialoglinecam.ui  dialogoutputset.cpp  dialogoutputset.h  dialogoutputset.ui  dialogrobotacq.cpp  dialogrobotacq.h  dialogrobotacq.ui  dialogsimulationset.cpp  dialogsimulationset.h  dialogsimulationset.ui  dialogtoolpara.cpp  dialogtoolpara.h  dialogtoolpara.ui  file.qrc  forminterface.cpp  forminterface.h  forminterface.ui  jobmanager.cpp  jobmanager.h  jobworker.cpp  jobworker.h  logo.qrc  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  (+3 more)
main_program/algorithm/: qtstreambuf.cpp  qtstreambuf.h
main_program/controls/: calipertoolpara.cpp  calipertoolpara.h  calipertoolpara.ui
main_program/qss/: darkblue.css  psblack.css  silvery.css
main_program/tool/: cam.cpp  cam.h  communication.cpp  communication.h  communicationcom.cpp  communicationcom.h  communicationmodbus.cpp  communicationmodbus.h  plc_siemens.cpp  plc_siemens.h  projecttool.cpp  projecttool.h  tool.cpp  tool.h
